scalr-ctl Changelog
===============


Changelog on Scalr Wiki: https://scalr-labs.atlassian.net/wiki/pages/viewpage.action?pageId=109805613



Version 2.0.12
--------------

New feature

    ST-214 Support role cloning API methods


Version 2.0.11
--------------

New feature

    ST-213 Manage Farm Roles storage


Version 2.0.10
--------------

Fixed

    ST-211 Can't create/update Cloud Credentials


Version 2.0.8
--------------

Improvements

    ST-207 Redundand commands get-instance-configuration, get-placement-configuration,
    update-instance-configuration and update-placement-configuration removed.

    ST-208 Filter nested objects


Version 2.0.7
--------------

New feature

    ST-205 Farm Suspend functionality


Version 2.0.6
--------------

New feature

    ST-203 Add "scalr-ctl events get-log" command


Version 2.0.5
--------------

Fixed

    Spelling fixed

New feature

    ST-201 Add fire event method


Version 2.0.4
--------------

New feature

    ST-199 Manage deprecated flag in Image


Version 2.0.3
--------------

Fixed

    ST-197 Fix incorrect error messages

New feature

    ST-198 Add support for Role Images in Global scope.


Version 2.0.2
--------------

New feature

    ST-196 Implement endpoint for GV in user, account and global scopes.


Version 2.0.1
--------------

Improvements

    ST-147 Refactor scalr-ctl configure & add --admin option
    ST-170 Refactor update system
    ST-171 Refactor request.py
    ST-134 Refactor Import/export for Roles
    ST-169 Generate examples for POST methods
    ST-183 Example JSON objects should not contain read-only properties
    ST-176 Add medium tests for scalr-ctl configure
    ST-177 Add medium tests for update spec
    ST-178 Add regression tests for every command's help
    ST-174 Refactor commands.Action
    ST-192 Make --interactive the default mode for POST commands
    ST-173 Refactor app.py & fix autocomplete for Export
    ST-174 Refactor commands.Action