@@ -12,7 +12,8 @@ Version 2.0.12
 New feature
 
     ST-214 Support role cloning API methods
-
+    ST-217 Support webhook-endpoints list action
+    
 
 Version 2.0.11
 --------------
